<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:background="@color/white_bg"

    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <LinearLayout
        android:id="@+id/title_layout_h"
        android:layout_width="287dp"
        android:layout_height="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="57dp"
            android:layout_marginHorizontal="5dp"
            app:srcCompat="@drawable/ic_launcher6"
            tools:srcCompat="@drawable/ic_launcher6" />

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.148"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_budslablogoasset_2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:fontFamily="sans-serif"
                android:text="@string/mainappName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="372dp"
        android:layout_height="129dp"
        android:layout_marginTop="8dp"
        android:background="@color/white_bg"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/experimentIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/experimentId"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="the experiment id e.g. enth_21"
            android:inputType="textPersonName"
            android:text="@string/testString"
            android:textAlignment="center"
            android:textColor="#9e9e9e"
            android:textSize="14sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPersonNumber"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="the experiment id e.g. enth_21"
            android:inputType="textPersonName"
            android:text="@string/testStringNum"
            android:textAlignment="center"
            android:textColor="#9e9e9e"
            android:textSize="14sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/buttonChangeId"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:paddingHorizontal="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/changeId"
            android:textSize="10sp"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/buttonStartLocation"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/startLocation"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <ImageView
            android:id="@+id/locationLogo"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/ic_location_on_48px_512" />

        <WebView
            android:id="@+id/locationDataWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#000000"
            android:textSize="10sp"
            android:background="@color/white_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            tools:ignore="WebViewLayout" />

        <!--        <TextView-->
        <!--            android:id="@+id/positioning_info"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:text="Location data"-->
        <!--            android:textColor="@color/cat_premium"-->
        <!--            android:textSize="10sp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/divider2" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/layout_refresh_enterdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <!--        <Button-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:id="@+id/button_refresh_userInfo"-->
            <!--            android:text="my progress"-->
            <!--            android:layout_weight="1"-->
            <!--            android:layout_margin="3dp"-->
            <!--            android:padding="0dp"-->
            <!--            ></Button>-->

            <!--            <Button-->
            <!--                android:id="@+id/button_enter_feedback"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_margin="3dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:padding="0dp"-->
            <!--                android:text="Enter feedback"></Button>-->
        </LinearLayout>

        <WebView
            android:id="@+id/mainWebPageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_bg"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </WebView>

    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_layout_h" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/userInfoLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>